fixed positions a little more

--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -13,11 +13,11 @@
             <nav class="navbar navbar-default" role="navigation">
                 <img src="/home/logo_home.png" class="navbar-brand" />
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Basepaws</a></li>
-                    <li><a href="/CatKit">Cat Kit</a></li>
-                    <li><a href="/Report">Report</a></li>
-                    <li><a href="/HowItWorks">How it works</a></li>
-                    <li><a href="/OrderNow">Order Now</a></li>
+                    <li><a href="/">Product</a></li>
+                    <li><a href="/CatKit">How It Works</a></li>
+                    <li><a href="/Report">Blog</a></li>
+                    <li><a href="/HowItWorks">Activate Kit</a></li>
+                    <li><a href="/OrderNow">Cart</a></li>
                 </ul>
             </nav>
 
@@ -34,6 +34,9 @@
         </div>
         
 
+    </div>
+    <div>
+        
     </div>
 
 </body>
