--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -8,9 +8,11 @@
 
 .navbar-brand {
     float: left;
-    width: 15%;
-    height: 15%;
+    width: 18%;
+    height: 18%;
     padding-right: 5%;
+    padding-left: 2%;
+    padding-top: 2%;
 }
 
 nav {
@@ -22,8 +24,8 @@ ul {
     padding-left: 5%;
     text-decoration: none;
     float: left;
-    padding-top: 3%;
-    width: 70%;
+    padding-top: 5%;
+    width: 65%;
 }
 
 ul li {
@@ -51,8 +53,8 @@ ul li a {
 }
 
 .order {
-    width: 15%;
-    height: 15%;
+    width: 20%;
+    height: 20%;
     padding-left: 10%;
     padding-top: 5%;
     padding-bottom: 5%;
