cat kit includes is done

--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -24,19 +24,21 @@
         </div>
 
 
-        
+
         <div class="quote">
             <img class="quotes" src="/home/Group 22.png" />
+            <img class="social-media" src="/home/social ions.png" />
         </div>
 
         <div class="order-now">
             <img class="order" src="/home/order_my_kit.png" />
         </div>
-        
+
 
     </div>
-    <div>
-        
+    <div class="second-background">
+        <h1><img src="/home/catkit-title.png" /></h1>
+        <p><img src="/home/catkit-includes-icons.png" /></p>
     </div>
 
 </body>
