--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -8,8 +8,8 @@
 
 .navbar-brand {
     float: left;
-    width: 18%;
-    height: 18%;
+    width: 15%;
+    height: 15%;
     padding-right: 5%;
     padding-left: 2%;
     padding-top: 2%;
@@ -21,11 +21,11 @@ nav {
 }
 
 ul {
-    padding-left: 5%;
+    padding-left: 3%;
     text-decoration: none;
     float: left;
     padding-top: 5%;
-    width: 65%;
+    width: 75%;
 }
 
 ul li {
@@ -37,7 +37,7 @@ ul li {
 ul li a {
     text-decoration: none;
     color: black;
-    padding-right: 5%;
+    padding-right: 3%;
     font-family: montserrat;
 }
 
@@ -52,10 +52,42 @@ ul li a {
     padding-left: 10%;
 }
 
+.social-media {
+    width: 3%;
+    height: 3%;
+    float: right;
+    padding-right: 10%;
+}
+
 .order {
     width: 20%;
     height: 20%;
     padding-left: 10%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 8%;
+    padding-bottom: 20%;
+}
+
+.second-background {
+    background-image: url("second-background.png");
+}
+
+h1 {
+    width: 100%;
+    height: 100%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+h1 img {
+    width: 30%;
+    height: 30%;
+    padding-left: 35%;
+    padding-right: 35%;    
+}
+
+p img {
+    width: 70%;
+    height: 75%;
+    padding-left: 15%;
+    padding-right: 15%;
 }
