--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -36,10 +36,16 @@
 
 
     </div>
+
     <div class="second-background">
         <h1><img src="/home/catkit-title.png" /></h1>
         <p><img src="/home/catkit-includes-icons.png" /></p>
     </div>
+
+    <div class="third-background">
+        <img class="catkit-image" src="/home/catkit-report.png" />
+    </div>
+
 
 </body>
 
