--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -91,3 +91,16 @@ p img {
     padding-left: 15%;
     padding-right: 15%;
 }
+
+.third-background {
+    background-image: url("second_background.png");
+    width: 100%;
+    height: 100%;
+}
+
+.catkit-image {
+    width: 75%;
+    height: 75%;
+    padding-left: 12.5%;
+    padding-right: 12.5%
+}
